UI change in the tutorial

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,14 +32,14 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="res://credits.ico"
+application/console_wrapper_icon="res://credits.ico"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name="FixIt team"
 application/product_name="FixIt"
-application/file_description=""
+application/file_description="Project for the Universidad de Cantabria."
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
